added error messages in admin panel

--- a/login/templates/acc_active_email.html
+++ b/login/templates/acc_active_email.html
@@ -1,6 +1,7 @@
 {% autoescape off %}  
 Hi {{ user.username }},  
-Your new password is: {{password}}. You will be asked to change it on your first login.
+Your new password is: {{password}} 
+You will be asked to change it on your first login.
 Please click on the link to confirm your registration,  
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}  
 {% endautoescape %}  
